kubernetes-manifests/monitoring/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
    prometheus.io/path: "/metrics"
  labels:
    app.kubernetes.io/name: grafana
spec:
  ports:
    - name: web
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
