kubernetes-manifests/monitoring/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: grafana.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`grafana.dtlp.cc`)
      services:
        - name: grafana
          kind: Service
          port: 3000
          sticky:
            cookie: {}
  tls: {}
